--- a/KamleonApp/app/src/main/res/values/strings.xml
+++ b/KamleonApp/app/src/main/res/values/strings.xml
@@ -246,6 +246,7 @@
     <string name="dialog_deactive_msg">Are you sure you want to deactivate your account?</string>
     <string name="dialog_deactive_y">Deactivate</string>
     <string name="dialog_deactive_n">Cancel</string>
+    <string name="dialog_profile_date_not_allowed">You have to be at least 14 years old</string>
 
     <!-- Error -->
     <string name="error_login">Error login</string>
@@ -329,4 +330,8 @@
 
     <string name="default_value">--</string>
     <string name="user_name_initials">%1$s%2$s</string>
+
+    <string name="switch_thumb_path_checked" translatable="false">M4,16 A12,12 0 0,1 16,4 H16 A12,12 0 0,1 16,28 H16 A12,12 0 0,1 4,16</string>
+    <string name="switch_thumb_path_unchecked" translatable="false">M,16 A8,8 0 0,1 16,8 H16 A8,8 0 0,1 16,24 H16 A8,8 0 0,1 8,16</string>
+
 </resources>
